--- a/src/Components/show.css
+++ b/src/Components/show.css
@@ -22,12 +22,12 @@
     position: relative;
     transition: all 0.4s;
     display: flex;
-    flex-direction: column; /* Stack image and content vertically */
+    flex-direction: column;
   }
 
   .Box-Gallery img {
     max-width: 100%;
-    max-height: 100%; /* Added to ensure the image doesn't overflow its container */
+    max-height: 100%;
     object-fit: cover;
     /* position: absolute; */
   }
